feat: Enhance IA Tracking SDK with new revenue tracking features and configuration options
- Updated `ia_tracking.podspec` to include new source files and dependencies for enhanced features.
- Added new constants in `constants.dart` for API endpoints and method channels.
- Introduced `ia_tracking_config.dart` for enhanced SDK configuration, including privacy settings and SKAdNetwork support.
- Implemented revenue tracking models in `revenue_models.dart` for both iOS and Android in-app purchases.
- Enhanced `ia_tracker.dart` with new methods for tracking revenue events and managing global properties.
- Updated Dart exports in `ia_tracking.dart` to include new models and configuration files.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -49,6 +49,13 @@ android {
     dependencies {
         implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
         
+        // HTTP client for API calls
+        implementation 'com.squareup.okhttp3:okhttp:4.11.0'
+        implementation 'com.google.code.gson:gson:2.10.1'
+        
+        // Coroutines for async operations
+        implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+        
         // Reference to our native Android SDK
         // TODO: Uncomment when native Android SDK is properly integrated
         // implementation project(path: ':android-sdk')
