feat: Implement App Tracking Transparency (ATT) support with IDFA handling and user permission requests

--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -45,5 +45,7 @@
     <true/>
     <key>UIApplicationSupportsIndirectInputEvents</key>
     <true/>
+    <key>NSUserTrackingUsageDescription</key>
+    <string>This app uses tracking to provide personalized analytics and improve user experience. Your tracking preferences can be changed at any time in Settings.</string>
 </dict>
 </plist>
